# usdUtils

./: .gitignore  README.md  avatar.fbx  avatar.gltf  extract_tx.py  glb2gltf.py  glb2usd.py  glb2usd_shell.py  glb_fbx.py  pyproject.toml  pyproject.toml.bak.poetry2uv  pyproject.uv.toml
assets/: suhail_avatar.glb
avatar.fbm/: image7  image9  tshirt-BC-01
usdutils/: glb2usd.py
usdutils/pyScripts/: set_light_rel.py
usdutils/pyproduction_assignment/: glb2usd.py
