[tool.poetry]
name = "usdutils"
version = "0.1.0"
description = "USD Utilitis"
authors = ["Suhail <suhailece@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "^1.26.4"
cmake = "^3.28.4"
pyopengl = "^3.1.7"
pyside6 = "^6.6.2"
pygltflib = "^1.16.2"
pyfbx = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
